Add alarm times to days
Allow requesting of current day in json

Change-Id: I7a2ee2b538744d442a650668ca8cbb562edad8d6

--- a/app/assets/stylesheets/days.css.scss
+++ b/app/assets/stylesheets/days.css.scss
@@ -20,7 +20,7 @@
 .concrete-date > div {
   padding: 5px;
 }
-.day-of-month {
+.concrete-date > a {
   font-size: 18pt;
 }
 .current-day {
@@ -28,4 +28,7 @@
 }
 .concrete-date:hover{
   background-color: #ddd;
+}
+.day-details {
+  font-size: 10pt;
 }
