--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -18,6 +18,6 @@
   <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
               activity_path(@activity),
               :method => 'delete',
-              :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
               :class => 'btn btn-danger' %>
 </div>
