--- a/app/views/days/show.html.erb
+++ b/app/views/days/show.html.erb
@@ -30,6 +30,6 @@
   <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
               day_path(@day),
               :method => 'delete',
-              :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
               :class => 'btn btn-danger' %>
 </div>
