--- a/app/views/health_levels/index.html.erb
+++ b/app/views/health_levels/index.html.erb
@@ -23,7 +23,7 @@
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
                       health_level_path(health_level),
                       :method => :delete,
-                      :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-mini btn-danger' %>
         </td>
       </tr>
