--- a/app/views/moods/index.html.erb
+++ b/app/views/moods/index.html.erb
@@ -21,7 +21,7 @@
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
                       mood_path(mood),
                       :method => :delete,
-                      :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-mini btn-danger' %>
         </td>
       </tr>
